# docs/swagger.json
@@ -1,14 +1,8 @@
-// Package docs Code generated by swaggo/swag. DO NOT EDIT
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "This is a sample server for maintenance of SWIFTcode API.",
+        "title": "SWIFTcode API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
@@ -19,10 +13,10 @@ const docTemplate = `{
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "host": "localhost:8080",
+    "basePath": "/v1",
     "paths": {
         "/swift-codes": {
             "get": {
@@ -185,9 +179,9 @@ const docTemplate = `{
                 ],
                 "responses": {
                     "200": {
-                        "description": "SWIFT headquarter entity",
+                        "description": "SWIFT branch entity",
                         "schema": {
-                            "$ref": "#/definitions/REST.HeadquarterResponse"
+                            "$ref": "#/definitions/REST.BranchHeadquarterResponse"
                         }
                     },
                     "404": {
@@ -267,6 +261,35 @@ const docTemplate = `{
                 }
             }
         },
+        "REST.BranchHeadquarterResponse": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "bankName": {
+                    "type": "string"
+                },
+                "branches": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/structs.ReqBranch"
+                    }
+                },
+                "countryISO2": {
+                    "type": "string"
+                },
+                "countryName": {
+                    "type": "string"
+                },
+                "isHeadquarter": {
+                    "type": "boolean"
+                },
+                "swiftCode": {
+                    "type": "string"
+                }
+            }
+        },
         "REST.BranchResponse": {
             "type": "object",
             "required": [
@@ -318,35 +341,6 @@ const docTemplate = `{
                     "items": {
                         "$ref": "#/definitions/structs.ReqHeadBranInCountry"
                     }
-                }
-            }
-        },
-        "REST.HeadquarterResponse": {
-            "type": "object",
-            "properties": {
-                "address": {
-                    "type": "string"
-                },
-                "bankName": {
-                    "type": "string"
-                },
-                "branches": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/structs.ReqBranch"
-                    }
-                },
-                "countryISO2": {
-                    "type": "string"
-                },
-                "countryName": {
-                    "type": "string"
-                },
-                "isHeadquarter": {
-                    "type": "boolean"
-                },
-                "swiftCode": {
-                    "type": "string"
                 }
             }
         },
@@ -421,22 +415,4 @@ const docTemplate = `{
             "type": "basic"
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	Host:             "localhost:8080",
-	BasePath:         "/v1",
-	Schemes:          []string{},
-	Title:            "SWIFTcode API",
-	Description:      "This is a sample server for maintenance of SWIFTcode API.",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
