# src/structs/requestStructures.go
@@ -19,6 +19,16 @@ type ReqHeadquarter struct {
     Branches []ReqBranch `json:"branches"`
 }
 
+type ReqHeadquarterBranch struct {
+	Address string `json:"address"`
+    BankName string `json:"bankName"`
+    CountryISO2 string `json:"countryISO2"`
+    CountryName string `json:"countryName"`
+    IsHeadquarter bool `json:"isHeadquarter"`
+    SwiftCode string `json:"swiftCode"`
+    Branches *[]ReqBranch `json:"branches"`
+}
+
 type ReqCountry struct {
 	CountryISO2 string `json:"countryISO2"`
     CountryName string `json:"countryName"`
